src/containers/App/App.scss
@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
@import '../../styles/mixins.scss';
@import './NodesTable';

* {
    // FIXME: this is an overkill, potentially could break external components, needs refactoring
    box-sizing: border-box;
}

.yc-select-popup__tick-icon {
    // this is a local fix, remove after the refactoring
    box-sizing: content-box;
}

html,
body,
#root {
    overflow: auto;

    box-sizing: border-box;
    height: 100%;
    margin: 0;
    padding: 0;
}

:root {
    --yc-color-infographics-yellow-light: rgba(255, 199, 0, 0.15);
    --yc-color-infographics-yellow-medium: rgba(255, 219, 77, 0.4);
    --yc-color-base-warning-orange: #ff922e;

    --data-table-row-height: 40px;
}

.yc-root {
    --ydb-data-table-color-hover: var(--yc-color-base-float-hover);
}

.yc-select__label {
    font-weight: 600;
}

:is(#tab, .yc-tabs-item_active .yc-tabs-item__title) {
    color: var(--yc-color-text-primary) !important;
}

:is(#tab, .yc-tabs-item__title) {
    color: var(--yc-color-text-secondary);
}

.ycn-aside-header__pane-container {
    height: 100%;
}

.ycn-aside-header__content {
    position: relative;

    display: flex;
    overflow: auto;
    flex-direction: column;

    height: 100%;
}

.loader {
    @include loader();
}

.app {
    height: 100%;
    @include flex-container();

    &__main {
        overflow: auto;
        @include flex-container();
    }

    .data-table {
        width: 100%;
        @include body2-typography();

        &__table {
            max-width: 100%;

            border-spacing: 0;
            border-collapse: separate;
        }
    }

    .data-table__th {
        font-weight: bold;

        border-top: unset;
        border-right: unset;
        border-left: unset;
    }

    .data-table__sticky .data-table__th,
    .data-table__td {
        height: var(--data-table-row-height);

        vertical-align: middle;

        border-top: unset;
        border-right: unset;
        border-left: unset;
    }

    .yc-clipboard-button {
        display: inline-flex;
        justify-content: center;
        align-items: center;
    }

    .yc-button__text {
        display: flex;
        align-items: center;
    }
}

.error {
    display: flex;
    justify-content: center;
    align-items: center;

    margin: 2px;
    padding: 2px;

    text-align: center;

    color: var(--yc-color-text-danger);
    border-color: var(--yc-color-text-danger);
}

.data-table__row:hover .entity-status__clipboard-button {
    display: flex;
}

.yc-root .data-table_highlight-rows .data-table__row:hover {
    background: var(--ydb-data-table-color-hover);
}

.yc-table-column-setup__item {
    /* stylelint-disable-next-line declaration-no-important*/
    padding: 0 8px 0 32px !important;
    /* stylelint-disable-next-line declaration-no-important*/
    cursor: pointer !important;
}

.app_embedded {
    font-family: 'Rubik', sans-serif;
}

.yc-popup {
    max-width: 500px;
}

